3. Liquibase. Интеграционные тесты. [#95881] Отработка замечаний